[tool.poetry]
name = "webhook-test-with-functions"
version = "0.1.0"
description = ""
authors = ["fealone <fealone@lonesec.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
agraffe = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
